--- a/frontend/src/app/components/CheckOut/cart-summary/cart-summary.component.html
+++ b/frontend/src/app/components/CheckOut/cart-summary/cart-summary.component.html
@@ -5,34 +5,38 @@
     <div *ngIf="cartItems.length > 0; else emptyCart">
       <div class="order-items">
   
-        <div *ngFor="let item of cartItems" class="order-item d-flex align-items-center mb-4">
+        <div *ngFor="let cart of cartItems" class="order-item d-flex align-items-center mb-4">
           <div class="col-lg-2 col-md-3 col-sm-2 me-4">
-            <img [src]="shoeService.getImageUrl(item.shoeId, 1)" class="img-fluid" alt="Product Image">
+            <img [src]="shoeService.getImageUrl(cart.item.shoeId, 1)" class="img-fluid" alt="Product Image">
           </div>
-          [src]="shoeService.getImageUrl(item.shoeId, 1)"
           <div class="ms-3 flex-grow-1">
-            <h5 class="mb-2">{{ item.shoeName }}</h5>
+            <h5 class="mb-2">{{ cart.item.shoeName }}</h5>
   
             <div class="d-flex justify-content-between align-items-center flex-wrap">
-  
-              <!-- Selector de cantidad -->
-              <div class="input-group product-qty">
-                <button type="button" class="quantity-left-minus btn btn-light rounded-0 rounded-start" (click)="decreaseQuantity(item)">
-                  -
-                </button>
-  
-                <input type="text" class="form-control input-number quantity quantity-input" [value]="item.quantity" readonly>
-  
-                <button type="button" class="quantity-right-plus btn btn-light rounded-0 rounded-end" (click)="increaseQuantity(item)">
-                  +
-                </button>
-              </div>
-  
+              <ng-container *ngIf="cart.stockAvailable; else noStock">
+                <!-- Selector de cantidad -->
+                <div class="input-group product-qty">
+                  <button type="button" class="quantity-left-minus btn btn-light rounded-0 rounded-start" (click)="decreaseQuantity(cart.item)">
+                    -
+                  </button>
+    
+                  <input type="text" class="form-control input-number quantity quantity-input" [value]="cart.item.quantity" readonly>
+    
+                  <button type="button" class="quantity-right-plus btn btn-light rounded-0 rounded-end" (click)="increaseQuantity(cart.item)">
+                    +
+                  </button>
+                </div>
+              </ng-container>
+
+              <ng-template #noStock>
+                <p class="text-danger mb-2">❌ No stock available</p>
+              </ng-template>
+              
               <div class="price-wrapper mb-2 ms-3">
-                <span class="fw-bold">{{ item.price | currency }}</span>
+                <span class="fw-bold">{{ cart.item.price | currency }}</span>
               </div>
   
-              <button class="btn btn-link text-danger p-0 mb-2 ms-3" (click)="removeItem(item)">
+              <button class="btn btn-link text-danger p-0 mb-2 ms-3" (click)="removeItem(cart.item)">
                 🗑️
               </button>
   
