recommended products component working

--- a/frontend/src/app/components/recommendedProducts/recommendedProducts.component.html
+++ b/frontend/src/app/components/recommendedProducts/recommendedProducts.component.html
@@ -9,7 +9,7 @@
       
       <div class="product-content padding-small position-relative">
         <!-- Contenedor Swiper -->
-        <div class="swiper-container">
+        <div class="swipperRecommended">
           <div class="swiper-wrapper">
             <div class="swiper-slide" *ngFor="let product of recommendedShoes">
               <div class="product-card position-relative">
