--- a/frontend/src/app/components/featuredProducts/featuredProducts.component.html
+++ b/frontend/src/app/components/featuredProducts/featuredProducts.component.html
@@ -8,7 +8,7 @@
       </div>
       <div class="product-content padding-small position-relative">
         <!-- Contenedor Swiper -->
-        <div class="swiper-container">
+        <div class="swipperFeatured">
           <div class="swiper-wrapper">
             <div class="swiper-slide" *ngFor="let product of bestSellingShoes">
               <div class="product-card position-relative">
