--- a/frontend/src/app/components/recommendedProducts/recommendedProducts.component.css
+++ b/frontend/src/app/components/recommendedProducts/recommendedProducts.component.css
@@ -1,4 +1,4 @@
-.product-store .swipperFeatured {
+.product-store .swipperRecommended {
     width: 100%;
     overflow: hidden;
     position: relative;
