--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,6 +4,7 @@
 <app-image-collage-big></app-image-collage-big>
 <app-coupon></app-coupon>
 <app-featured-products></app-featured-products>
+<app-image-collage-small></app-image-collage-small>
 <app-recommended-products></app-recommended-products>
 <app-footer></app-footer>
 
