--- a/frontend/src/app/components/CheckOut/cart-summary/cart-summary.component.html
+++ b/frontend/src/app/components/CheckOut/cart-summary/cart-summary.component.html
@@ -47,7 +47,7 @@
       </div>
   
       <!-- Botón para recalcular -->
-      <button type="button" class="btn btn-red hvr-sweep-to-right dark-sweep w-100 mb-3" (click)="recalculateTotal()">
+      <button type="button" class="btn btn-red hvr-sweep-to-right dark-sweep w-100 mb-3" (click)="recalculateTotal()" [disabled]="couponLocked">
         Recalculate
       </button>
   
@@ -55,7 +55,7 @@
       <div class="mt-4 pt-4 border-top">
         <div class="d-flex justify-content-between mb-2">
           <span>Subtotal:</span>
-          <span class="fw-bold">{{ subtotal | currency }}</span>
+          <span class="fw-bold">{{ displayedSubtotal  | currency }}</span>
         </div>
         <div class="d-flex justify-content-between mb-2">
           <span>Shipping:</span>
@@ -63,7 +63,7 @@
         </div>
         <div class="d-flex justify-content-between mt-3 pt-3 border-top">
           <span class="h5">Total:</span>
-          <span class="h5">{{ subtotal | currency }}</span>
+          <span class="h5">{{ totalAfterDiscount  | currency }}</span>
         </div>
       </div>
     </div>
