--- a/frontend/src/app/components/singleProduct/shoeInfo.component.html
+++ b/frontend/src/app/components/singleProduct/shoeInfo.component.html
@@ -70,26 +70,30 @@
                                     <li data-value="XL" class="select-size-item"
                                         [style.pointer-events]="isSizeOutOfStock('XL') ? 'none' : 'auto'"
                                         [style.backgroundColor]="isSizeOutOfStock('XL') ? 'grey' : ''"
+                                        [class.selected]="selectedSize === 'XL'"
                                         (click)="selectSize('XL')">
-                                        <a href="#">XL</a>
+                                        <span>XL</span>
                                     </li>
                                     <li data-value="L" class="select-size-item"
                                         [style.pointer-events]="isSizeOutOfStock('L') ? 'none' : 'auto'"
                                         [style.backgroundColor]="isSizeOutOfStock('L') ? 'grey' : ''"
+                                        [class.selected]="selectedSize === 'L'"
                                         (click)="selectSize('L')">
-                                        <a href="#">L</a>
+                                        <span>L</span>
                                     </li>
                                     <li data-value="M" class="select-size-item"
                                         [style.pointer-events]="isSizeOutOfStock('M') ? 'none' : 'auto'"
                                         [style.backgroundColor]="isSizeOutOfStock('M') ? 'grey' : ''"
+                                        [class.selected]="selectedSize === 'M'"
                                         (click)="selectSize('M')">
-                                        <a href="#">M</a>
+                                        <span>M</span>
                                     </li>
                                     <li data-value="S" class="select-size-item"
                                         [style.pointer-events]="isSizeOutOfStock('S') ? 'none' : 'auto'"
                                         [style.backgroundColor]="isSizeOutOfStock('S') ? 'grey' : ''"
+                                        [class.selected]="selectedSize === 'S'"
                                         (click)="selectSize('S')">
-                                        <a href="#">S</a>
+                                        <span>S</span>
                                     </li>
                                 </ul>
                             </div>
