--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header id="header" class="site-header text-black">
     <nav id="header-nav" class="navbar navbar-expand-lg">
         <div class="container-lg">
-            <a class="navbar-brand d-flex align-items-center" [routerLink]="['/index']">
+            <a class="navbar-brand d-flex align-items-center" [routerLink]="['/']">
                 <div class="logo-wrapper">
                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                         width="200" height="75" viewBox="0 0 3600 800">
@@ -37,7 +37,7 @@
                 <div class="offcanvas-body">
                     <ul id="navbar" class="navbar-nav fw-bold justify-content-end align-items-center flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link me-5" [routerLink]="['/index']" routerLinkActive="active">HOME</a>
+                            <a class="nav-link me-5" [routerLink]="['/']" routerLinkActive="active">HOME</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link me-5" [routerLink]="['/shop']" routerLinkActive="active">Shop</a>
