docker working, fixed singleprod, fixed create image script

--- a/backend/src/main/resources/templates/single-product.html
+++ b/backend/src/main/resources/templates/single-product.html
@@ -54,7 +54,7 @@
                 </div>
               </div>
               <!-- / product-thumbnail-slider -->
-            </iv>
+          </div>
             <div class="col-md-12 col-lg-10">
               <!-- product-large-slider -->
               <div class="swiper product-large-slider">
