--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -5,7 +5,7 @@
         <!-- Image Column -->
         <div class="col-lg-6 mb-4 mb-lg-0">
           <div class="product-image-container">
-            <img src="../../../assets/images/NikeShoePurple.png" alt="Shoe" class="img-fluid rounded" id="currentProductImage"
+            <img src="assets/images/NikeShoePurple.png" alt="Shoe" class="img-fluid rounded" id="currentProductImage"
               style="max-width: 100%; height: auto;">
           </div>
         </div>
