--- a/frontend/src/app/components/image-collage-big/image-collage-big.component.html
+++ b/frontend/src/app/components/image-collage-big/image-collage-big.component.html
@@ -6,7 +6,7 @@
         <!-- Large image on the left -->
         <div class="col-12 col-lg-6">
           <div class="image-container-lg">
-            <img src="../../../assets/images/card-image1.jpg" alt="Urban Shoes">
+            <img src="assets/images/card-image1.jpg" alt="Urban Shoes">
             <div class="image-overlay">
               <h2 class="card-title style-2 display-4 light">Urban Shoes</h2>
               <a href="/shop" class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop
@@ -18,7 +18,7 @@
         <!-- Two stacked images on the right -->
         <div class="col-12 col-lg-6 d-flex flex-column justify-content-between">
           <div class="image-container-sm mb-3">
-            <img src="../../../assets/images/card-large-item2.jpg" alt="Sport Wear">
+            <img src="assets/images/card-large-item2.jpg" alt="Sport Wear">
             <div class="image-overlay">
               <h2 class="card-title style-2 display-4 light">Sport Wear</h2>
               <a href="/shop" class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop
@@ -27,7 +27,7 @@
           </div>
   
           <div class="image-container-sm">
-            <img src="../../../assets/images/banner-image5.jpg" alt="Casual Shoes">
+            <img src="assets/images/banner-image5.jpg" alt="Casual Shoes">
             <div class="image-overlay">
               <h2 class="card-title style-2 display-4 light">Casual Shoes</h2>
               <a href="/shop" class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop
