--- a/frontend/src/app/components/image-collage-small/image-collage-small.component.html
+++ b/frontend/src/app/components/image-collage-small/image-collage-small.component.html
@@ -3,7 +3,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 mb-4">
           <div class="collection-card card border-0 d-flex flex-row align-items-end jarallax-keep-img">
-            <img src="../../../assets/images/collection-item1.jpg" alt="product-item" class="border-rounded-10 img-fluid jarallax-img">
+            <img src="assets/images/collection-item1.jpg" alt="product-item" class="border-rounded-10 img-fluid jarallax-img">
             <div class="card-detail p-3 m-3 p-lg-5 m-lg-5">
               <h2 class="card-title style-2 display-4 dark">Adidas New Collection</h2>
               <a href="/shop" class="text-uppercase dark mt-3 d-inline-block text-hover fw-bold dark-border">Shop
@@ -13,7 +13,7 @@
         </div>
         <div class="col-lg-6 col-md-6">
           <div class="collection-card card border-0 d-flex flex-row jarallax-keep-img">
-            <img src="../../../assets/images/collection-item2.jpg" alt="product-item" class="border-rounded-10 img-fluid jarallax-img">
+            <img src="assets/images/collection-item2.jpg" alt="product-item" class="border-rounded-10 img-fluid jarallax-img">
             <div class="card-detail p-3 m-3 p-lg-5 m-lg-5">
               <h2 class="card-title style-2 display-4 dark">Nike New Collection</h2>
               <a href="/shop" class="text-uppercase dark mt-3 d-inline-block text-hover fw-bold dark-border">Shop
