image collage routerlinks

--- a/frontend/src/app/components/image-collage-big/image-collage-big.component.html
+++ b/frontend/src/app/components/image-collage-big/image-collage-big.component.html
@@ -9,7 +9,7 @@
             <img src="assets/images/card-image1.jpg" alt="Urban Shoes">
             <div class="image-overlay">
               <h2 class="card-title style-2 display-4 light">Urban Shoes</h2>
-              <a href="/shop" class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop
+              <a [routerLink]="['/shop']" routerLinkActive="active" class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop
                 Now</a>
             </div>
           </div>
@@ -21,7 +21,7 @@
             <img src="assets/images/card-large-item2.jpg" alt="Sport Wear">
             <div class="image-overlay">
               <h2 class="card-title style-2 display-4 light">Sport Wear</h2>
-              <a href="/shop" class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop
+              <a [routerLink]="['/shop']" routerLinkActive="active"class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop
                 Now</a>
             </div>
           </div>
@@ -30,7 +30,7 @@
             <img src="assets/images/banner-image5.jpg" alt="Casual Shoes">
             <div class="image-overlay">
               <h2 class="card-title style-2 display-4 light">Casual Shoes</h2>
-              <a href="/shop" class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop
+              <a [routerLink]="['/shop']" routerLinkActive="active" class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop
                 Now</a>
             </div>
           </div>
