--- a/frontend/src/app/components/image-collage-small/image-collage-small.component.html
+++ b/frontend/src/app/components/image-collage-small/image-collage-small.component.html
@@ -6,7 +6,7 @@
             <img src="assets/images/collection-item1.jpg" alt="product-item" class="border-rounded-10 img-fluid jarallax-img">
             <div class="card-detail p-3 m-3 p-lg-5 m-lg-5">
               <h2 class="card-title style-2 display-4 dark">Adidas New Collection</h2>
-              <a href="/shop" class="text-uppercase dark mt-3 d-inline-block text-hover fw-bold dark-border">Shop
+              <a [routerLink]="['/shop']" routerLinkActive="active" class="text-uppercase dark mt-3 d-inline-block text-hover fw-bold dark-border">Shop
                 Now</a>
             </div>
           </div>
@@ -16,7 +16,7 @@
             <img src="assets/images/collection-item2.jpg" alt="product-item" class="border-rounded-10 img-fluid jarallax-img">
             <div class="card-detail p-3 m-3 p-lg-5 m-lg-5">
               <h2 class="card-title style-2 display-4 dark">Nike New Collection</h2>
-              <a href="/shop" class="text-uppercase dark mt-3 d-inline-block text-hover fw-bold dark-border">Shop
+              <a [routerLink]="['/shop']" routerLinkActive="active" class="text-uppercase dark mt-3 d-inline-block text-hover fw-bold dark-border">Shop
                 Now</a>
             </div>
           </div>
