--- a/frontend/src/app/components/login-modal/login-modal.component.html
+++ b/frontend/src/app/components/login-modal/login-modal.component.html
@@ -28,7 +28,7 @@
         <span *ngIf="isLoading">Verificando...</span>
       </button>
 
-      <button type="button" class="btn-outline-gray hvr-sweep-to-right dark-sweep" (click)="navigateToRegister()">
+      <button type="button" class="btn-outline-gray hvr-sweep-to-right dark-sweep" [routerLink]="['/register']">
         Register
       </button>
     </div>
